Updated components, added forgot password routes and 3D view feature

--- a/frontend/src/styles/MyAccount.css
+++ b/frontend/src/styles/MyAccount.css
@@ -265,3 +265,11 @@ button:hover {
         width: 100%;
     }
 }
+
+.error-message {
+    color: red;
+    font-size: 12px;
+    margin-top: 4px;
+    display: block;
+  }
+  
